--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,14 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-evenly;
+  height: 100vh;
+}
+
+div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
@@ -47,6 +55,7 @@ a {
 .play-buttons-container {
   width: 70vw;
   display: flex;
+  flex-direction: row;
   justify-content: space-around;
 }
 
@@ -56,6 +65,15 @@ a {
   width: 10vw;
   border: solid;
   border-radius: 9px;
+}
+
+.choice-img {
+  width: 5vw;
+}
+
+.choices {
+  display: flex;
+  flex-direction: row;
 }
 
 /* Buttong Styling */
