--- a/styles.css
+++ b/styles.css
@@ -92,3 +92,55 @@ a {
   border-color: #fef649;
   box-shadow: 1px 0px 12px #ffc228;
 }
+
+.paypal {
+  border-radius: 25px;
+  width: 15vw;
+  height: 5vh;
+}
+
+/* Modal Styles */
+.endgame-modal {
+  background-color: grey;
+  z-index: 1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  border-radius: 10px;
+  text-align: center;
+  user-select: none;
+  transform: translate(-50%, -50%) scale(0);
+  transition: 200ms ease-in-out;
+  padding: 1%;
+}
+
+.modal-active {
+  transform: translate(-50%, -50%) scale(1);
+}
+
+.modal-button-container {
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.modal-button {
+  color: white;
+  border-radius: 25px;
+  width: 15vw;
+  height: 5vh;
+  margin: 10px;
+}
+
+.button-label {
+  margin: 0;
+}
+
+/* Overlay Styling */
+.overlay {
+  display: none;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: .6;
+}
